// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`content matches snapshot 1`] = `
Array [
  <a
    className="HiddenLink-wwwegq-0 fRIsRu"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  <div
    className="styled__BarWrapper-sc-3syvnw-12 ePgITh"
    data-analytics-region="openstax-navbar"
  >
    <div
      className="styled__TopBar-sc-3syvnw-0 iVnlSK"
      data-testid="navbar"
    >
      <a
        href="/"
      >
        <img
          alt="OpenStax Logo"
          className="styled__HeaderImage-sc-3syvnw-1 gTGoMI"
          role="img"
          src="logo.svg"
        />
      </a>
    </div>
  </div>,
  <div
    className="Content__Background-sc-1f451g1-0 gEoQaE"
  >
    <div
      className="BookBanner__BarWrapper-sc-1avy0c0-5 MNbyW"
      data-analytics-region="book-banner-expanded"
      data-testid="bookbanner"
    >
      <div
        className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
      >
        <a
          className="BookBanner__BookTitleLink-sc-1avy0c0-3 iGPDns"
          data-testid="details-link-expanded"
          href="/details/books/book-slug-1"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="BookBanner__LeftArrow-sc-1avy0c0-0 jjTVXA StyledIconBase-sc-bdy9j4 jbPeIR"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            />
          </svg>
          Test Book 1
        </a>
        <h1
          className="BookBanner__BookChapter-sc-1avy0c0-4 kPUGut"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<span class=\\"os-text\\">Test Page 4</span>",
            }
          }
        />
      </div>
    </div>
    <div
      className="BookBanner__BarWrapper-sc-1avy0c0-5 bheBBm"
      data-analytics-region="book-banner-collapsed"
      data-testid="bookbanner-collapsed"
    >
      <div
        className="BookBanner__TopBar-sc-1avy0c0-1 jVswHX"
      >
        <a
          className="BookBanner__BookTitleLink-sc-1avy0c0-3 iJDVtP"
          data-testid="details-link-collapsed"
          href="/details/books/book-slug-1"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            className="BookBanner__LeftArrow-sc-1avy0c0-0 jjTVXA StyledIconBase-sc-bdy9j4 jbPeIR"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 24 24"
          >
            <path
              d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
            />
          </svg>
          Test Book 1
        </a>
        <span
          className="BookBanner__BookChapter-sc-1avy0c0-4 fNXDFo"
          dangerouslySetInnerHTML={
            Object {
              "__html": "<span class=\\"os-text\\">Test Page 4</span>",
            }
          }
        />
      </div>
    </div>
    <div
      className="styled__BarWrapper-sc-1119auh-9 iBpta"
      data-analytics-region="toolbar"
    >
      <div
        className="styled__TopBar-sc-1119auh-11 iMGONm"
        data-testid="toolbar"
      >
        <button
          aria-label="Click to open the Table of Contents"
          className="styled__SidebarControl-sc-1119auh-17 DBTIW SidebarControl__ToCButton-sdjc7-2 tGPhq"
          data-testid="toc-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            className="SidebarControl__ListIcon-sdjc7-0 fmBBsO StyledIconBase-sc-bdy9j4 cCvWXa"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M61.77 401l17.5-20.15a19.92 19.92 0 0 0 5.07-14.19v-3.31C84.34 356 80.5 352 73 352H16a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8h22.83a157.41 157.41 0 0 0-11 12.31l-5.61 7c-4 5.07-5.25 10.13-2.8 14.88l1.05 1.93c3 5.76 6.29 7.88 12.25 7.88h4.73c10.33 0 15.94 2.44 15.94 9.09 0 4.72-4.2 8.22-14.36 8.22a41.54 41.54 0 0 1-15.47-3.12c-6.49-3.88-11.74-3.5-15.6 3.12l-5.59 9.31c-3.72 6.13-3.19 11.72 2.63 15.94 7.71 4.69 20.38 9.44 37 9.44 34.16 0 48.5-22.75 48.5-44.12-.03-14.38-9.12-29.76-28.73-34.88zM496 224H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-160H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 320H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zM16 160h64a8 8 0 0 0 8-8v-16a8 8 0 0 0-8-8H64V40a8 8 0 0 0-8-8H32a8 8 0 0 0-7.14 4.42l-8 16A8 8 0 0 0 24 64h8v64H16a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8zm-3.91 160H80a8 8 0 0 0 8-8v-16a8 8 0 0 0-8-8H41.32c3.29-10.29 48.34-18.68 48.34-56.44 0-29.06-25-39.56-44.47-39.56-21.36 0-33.8 10-40.46 18.75-4.37 5.59-3 10.84 2.8 15.37l8.58 6.88c5.61 4.56 11 2.47 16.12-2.44a13.44 13.44 0 0 1 9.46-3.84c3.33 0 9.28 1.56 9.28 8.75C51 248.19 0 257.31 0 304.59v4C0 316 5.08 320 12.09 320z"
              fill="currentColor"
            />
          </svg>
          <span
            className="SidebarControl__ToCButtonText-sdjc7-1 lkdFTR"
          >
            Table of contents
          </span>
        </button>
        <div
          className="styled__SearchPrintWrapper-sc-1119auh-8 gCGyni"
        >
          <form
            className="styled__SearchInputWrapper-sc-1119auh-6 gFglKV"
            data-testid="desktop-search"
            onSubmit={[Function]}
          >
            <input
              aria-label="Search this book"
              className="styled__SearchInput-sc-1119auh-7 fDlesR"
              data-testid="desktop-search-input"
              onChange={[Function]}
              placeholder="Search this book"
              type="search"
              value=""
            />
            <button
              aria-label="Search this book"
              className="styled__SearchButton-sc-1119auh-4 ikrSnP styled__PlainButton-sc-1119auh-0 kPdLbJ"
              data-testid="mobile-toggle"
              onClick={[Function]}
              type="button"
              value="Search"
            >
              <svg
                aria-hidden="true"
                className="StyledIconBase-sc-bdy9j4 cCvWXa"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 512 512"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <button
              className="styled__SearchButton-sc-1119auh-4 kDdwXC styled__PlainButton-sc-1119auh-0 kPdLbJ"
              value="Search"
            >
              <svg
                aria-hidden="true"
                className="StyledIconBase-sc-bdy9j4 cCvWXa"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 512 512"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </form>
        </div>
        <button
          aria-label="My highlights"
          className="styled__PlainButton-sc-1119auh-0 HighlightButton__MyHighlightsWrapper-fxks7p-0 ieTRLD"
          onClick={[Function]}
        >
          <img
            aria-hidden="true"
            className="HighlightButton__MyHighlightsIcon-fxks7p-1 iZcVEd"
            src="highlightIcon.svg"
          />
          <span
            className="HighlightButton__MyHighlightsText-fxks7p-2 fJSRKO"
          >
            My highlights
          </span>
        </button>
        <button
          aria-label="print"
          className="styled__PlainButton-sc-1119auh-0 styled__PrintOptWrapper-sc-1119auh-1 kbtaBS"
          data-testid="print"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="styled__PrintIcon-sc-1119auh-3 iKTgDK StyledIconBase-sc-bdy9j4 cCvWXa"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
              fill="currentColor"
            />
          </svg>
          <span
            className="styled__PrintOptions-sc-1119auh-2 bRCGrc"
          >
            Print
          </span>
        </button>
      </div>
    </div>
    <div
      className="Content__OuterWrapper-sc-1f451g1-5 eEKyye"
    >
      <div
        className="Wrapper-m6kdbg-0 QCZDS Layout__LayoutBody-s6mgs9-0 dheVTe"
      >
        <div
          className="Content__CenteredContentRow-sc-1f451g1-2 bIMWRC"
        >
          <div
            aria-label="Table of Contents"
            className="wrapper__SidebarBody-sc-1nl0jy-0 fRdwcf"
            data-analytics-region="toc"
            data-testid="toc"
          >
            <div
              className="wrapper__ToCHeader-sc-1nl0jy-1 flbrxb"
              data-testid="tocheader"
            >
              <button
                aria-label="Click to close the Table of Contents"
                className="wrapper__SidebarHeaderButton-sc-1nl0jy-3 fBHtqL SidebarControl__ToCButton-sdjc7-2 tGPhq"
                data-testid="toc-button"
                onClick={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="SidebarControl__ListIcon-sdjc7-0 fmBBsO StyledIconBase-sc-bdy9j4 cCvWXa"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M61.77 401l17.5-20.15a19.92 19.92 0 0 0 5.07-14.19v-3.31C84.34 356 80.5 352 73 352H16a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8h22.83a157.41 157.41 0 0 0-11 12.31l-5.61 7c-4 5.07-5.25 10.13-2.8 14.88l1.05 1.93c3 5.76 6.29 7.88 12.25 7.88h4.73c10.33 0 15.94 2.44 15.94 9.09 0 4.72-4.2 8.22-14.36 8.22a41.54 41.54 0 0 1-15.47-3.12c-6.49-3.88-11.74-3.5-15.6 3.12l-5.59 9.31c-3.72 6.13-3.19 11.72 2.63 15.94 7.71 4.69 20.38 9.44 37 9.44 34.16 0 48.5-22.75 48.5-44.12-.03-14.38-9.12-29.76-28.73-34.88zM496 224H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-160H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 320H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zM16 160h64a8 8 0 0 0 8-8v-16a8 8 0 0 0-8-8H64V40a8 8 0 0 0-8-8H32a8 8 0 0 0-7.14 4.42l-8 16A8 8 0 0 0 24 64h8v64H16a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8zm-3.91 160H80a8 8 0 0 0 8-8v-16a8 8 0 0 0-8-8H41.32c3.29-10.29 48.34-18.68 48.34-56.44 0-29.06-25-39.56-44.47-39.56-21.36 0-33.8 10-40.46 18.75-4.37 5.59-3 10.84 2.8 15.37l8.58 6.88c5.61 4.56 11 2.47 16.12-2.44a13.44 13.44 0 0 1 9.46-3.84c3.33 0 9.28 1.56 9.28 8.75C51 248.19 0 257.31 0 304.59v4C0 316 5.08 320 12.09 320z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  className="SidebarControl__ToCButtonText-sdjc7-1 gWBlHr"
                >
                  Table of contents
                </span>
                <svg
                  aria-hidden="true"
                  className="wrapper__TimesIcon-sc-1nl0jy-2 hvKSwO"
                  focusable="false"
                  height="15px"
                  version="1.1"
                  viewBox="0 0 15 15"
                  width="15px"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <g
                      fill="currentColor"
                      transform="translate(-302.000000, -18.000000)"
                    >
                      <g
                        transform="translate(302.000000, 18.000000)"
                      >
                        <path
                          d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </button>
            </div>
            <ol
              className="styled__NavOl-sc-18yti3s-5 cbWkuS"
            >
              <li
                className="styled__NavItem-sc-18yti3s-2 lcPtic"
              >
                <a
                  className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page 1</span>",
                    }
                  }
                  href="test-page-1"
                  onClick={[Function]}
                />
              </li>
              <li
                className="styled__NavItem-sc-18yti3s-2 lcPtic"
              >
                <details
                  className="styled__NavDetails-sc-18yti3s-6 fFBOM Details-xi326o-3 iboMxh"
                >
                  <summary
                    className="Details__Summary-xi326o-2 styled__Summary-sc-18yti3s-3 hLZWYd"
                  >
                    <div
                      className="styled__SummaryWrapper-sc-18yti3s-4 jeQjgr"
                    >
                      <svg
                        aria-hidden="true"
                        className="Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 192 512"
                      >
                        <path
                          d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        className="Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          fill="currentColor"
                        />
                      </svg>
                      <span
                        className="styled__SummaryTitle-sc-18yti3s-0 cpNgr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1</span>",
                          }
                        }
                      />
                    </div>
                  </summary>
                  <ol
                    className="styled__NavOl-sc-18yti3s-5 iFNiTd"
                  >
                    <li
                      className="styled__NavItem-sc-18yti3s-2 lcPtic"
                    >
                      <details
                        className="styled__NavDetails-sc-18yti3s-6 fFBOM Details-xi326o-3 iboMxh"
                      >
                        <summary
                          className="Details__Summary-xi326o-2 styled__Summary-sc-18yti3s-3 hLZWYd"
                        >
                          <div
                            className="styled__SummaryWrapper-sc-18yti3s-4 jeQjgr"
                          >
                            <svg
                              aria-hidden="true"
                              className="Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 192 512"
                            >
                              <path
                                d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                                fill="currentColor"
                              />
                            </svg>
                            <svg
                              aria-hidden="true"
                              className="Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 320 512"
                            >
                              <path
                                d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                                fill="currentColor"
                              />
                            </svg>
                            <span
                              className="styled__SummaryTitle-sc-18yti3s-0 cpNgr"
                              dangerouslySetInnerHTML={
                                Object {
                                  "__html": "<span class=\\"os-number\\">1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 1.1</span>",
                                }
                              }
                            />
                          </div>
                        </summary>
                        <ol
                          className="styled__NavOl-sc-18yti3s-5 jjmdsB"
                        >
                          <li
                            className="styled__NavItem-sc-18yti3s-2 lcPtic"
                          >
                            <a
                              className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                              dangerouslySetInnerHTML={
                                Object {
                                  "__html": "<span class=\\"os-text\\">Introduction to Science and the Realm of Physics, Physical Quantities, and Units</span>",
                                }
                              }
                              href="1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units"
                              onClick={[Function]}
                            />
                          </li>
                        </ol>
                      </details>
                    </li>
                    <li
                      className="styled__NavItem-sc-18yti3s-2 lcPtic"
                    >
                      <a
                        className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-number\\">1.1</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Physics: An Introduction</span>",
                          }
                        }
                        href="1-1-physics-an-introduction"
                        onClick={[Function]}
                      />
                    </li>
                    <li
                      className="styled__NavItem-sc-18yti3s-2 lcPtic"
                    >
                      <a
                        className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-number\\">23.12</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">RLC Series AC Circuits</span>",
                          }
                        }
                        href="23-12-rlc-series-ac-circuits"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </details>
              </li>
              <li
                className="styled__NavItem-sc-18yti3s-2 lcPtic"
              >
                <details
                  className="styled__NavDetails-sc-18yti3s-6 fFBOM Details-xi326o-3 iboMxh"
                >
                  <summary
                    className="Details__Summary-xi326o-2 styled__Summary-sc-18yti3s-3 hLZWYd"
                  >
                    <div
                      className="styled__SummaryWrapper-sc-18yti3s-4 jeQjgr"
                    >
                      <svg
                        aria-hidden="true"
                        className="Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 192 512"
                      >
                        <path
                          d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        className="Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          fill="currentColor"
                        />
                      </svg>
                      <span
                        className="styled__SummaryTitle-sc-18yti3s-0 cpNgr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-number\\">2</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 2</span>",
                          }
                        }
                      />
                    </div>
                  </summary>
                  <ol
                    className="styled__NavOl-sc-18yti3s-5 jjmdsB"
                  >
                    <li
                      className="styled__NavItem-sc-18yti3s-2 lcPtic"
                    >
                      <a
                        className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 3</span>",
                          }
                        }
                        href="2-test-page-3"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </details>
              </li>
              <li
                className="styled__NavItem-sc-18yti3s-2 lcPtic"
              >
                <details
                  className="styled__NavDetails-sc-18yti3s-6 fFBOM Details-xi326o-3 iboMxh"
                  open={true}
                >
                  <summary
                    className="Details__Summary-xi326o-2 styled__Summary-sc-18yti3s-3 hLZWYd"
                  >
                    <div
                      className="styled__SummaryWrapper-sc-18yti3s-4 jeQjgr"
                    >
                      <svg
                        aria-hidden="true"
                        className="Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 192 512"
                      >
                        <path
                          d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        className="Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          fill="currentColor"
                        />
                      </svg>
                      <span
                        className="styled__SummaryTitle-sc-18yti3s-0 cpNgr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-number\\">3</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 3</span>",
                          }
                        }
                      />
                    </div>
                  </summary>
                  <ol
                    className="styled__NavOl-sc-18yti3s-5 jjmdsB"
                  >
                    <li
                      aria-label="Current Page"
                      className="styled__NavItem-sc-18yti3s-2 lcPtic"
                    >
                      <a
                        className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 4</span>",
                          }
                        }
                        href="3-test-page-4"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </details>
              </li>
              <li
                className="styled__NavItem-sc-18yti3s-2 lcPtic"
              >
                <details
                  className="styled__NavDetails-sc-18yti3s-6 fFBOM Details-xi326o-3 iboMxh"
                >
                  <summary
                    className="Details__Summary-xi326o-2 styled__Summary-sc-18yti3s-3 hLZWYd"
                  >
                    <div
                      className="styled__SummaryWrapper-sc-18yti3s-4 jeQjgr"
                    >
                      <svg
                        aria-hidden="true"
                        className="Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 192 512"
                      >
                        <path
                          d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        className="Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          fill="currentColor"
                        />
                      </svg>
                      <span
                        className="styled__SummaryTitle-sc-18yti3s-0 cpNgr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-number\\">4</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 4</span>",
                          }
                        }
                      />
                    </div>
                  </summary>
                  <ol
                    className="styled__NavOl-sc-18yti3s-5 jjmdsB"
                  >
                    <li
                      className="styled__NavItem-sc-18yti3s-2 lcPtic"
                    >
                      <a
                        className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 5</span>",
                          }
                        }
                        href="4-test-page-5"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </details>
              </li>
              <li
                className="styled__NavItem-sc-18yti3s-2 lcPtic"
              >
                <details
                  className="styled__NavDetails-sc-18yti3s-6 fFBOM Details-xi326o-3 iboMxh"
                >
                  <summary
                    className="Details__Summary-xi326o-2 styled__Summary-sc-18yti3s-3 hLZWYd"
                  >
                    <div
                      className="styled__SummaryWrapper-sc-18yti3s-4 jeQjgr"
                    >
                      <svg
                        aria-hidden="true"
                        className="Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 192 512"
                      >
                        <path
                          d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        className="Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          fill="currentColor"
                        />
                      </svg>
                      <span
                        className="styled__SummaryTitle-sc-18yti3s-0 cpNgr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-number\\">10</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 5</span>",
                          }
                        }
                      />
                    </div>
                  </summary>
                  <ol
                    className="styled__NavOl-sc-18yti3s-5 jjmdsB"
                  >
                    <li
                      className="styled__NavItem-sc-18yti3s-2 lcPtic"
                    >
                      <a
                        className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 6</span>",
                          }
                        }
                        href="10-test-page-6"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </details>
              </li>
              <li
                className="styled__NavItem-sc-18yti3s-2 lcPtic"
              >
                <details
                  className="styled__NavDetails-sc-18yti3s-6 fFBOM Details-xi326o-3 iboMxh"
                >
                  <summary
                    className="Details__Summary-xi326o-2 styled__Summary-sc-18yti3s-3 hLZWYd"
                  >
                    <div
                      className="styled__SummaryWrapper-sc-18yti3s-4 jeQjgr"
                    >
                      <svg
                        aria-hidden="true"
                        className="Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 192 512"
                      >
                        <path
                          d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                          fill="currentColor"
                        />
                      </svg>
                      <svg
                        aria-hidden="true"
                        className="Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
                        fill="currentColor"
                        focusable="false"
                        viewBox="0 0 320 512"
                      >
                        <path
                          d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                          fill="currentColor"
                        />
                      </svg>
                      <span
                        className="styled__SummaryTitle-sc-18yti3s-0 cpNgr"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-number\\">12</span><span class=\\"os-divider\\"> </span><span class=\\"os-text\\">Test Chapter 6</span>",
                          }
                        }
                      />
                    </div>
                  </summary>
                  <ol
                    className="styled__NavOl-sc-18yti3s-5 jjmdsB"
                  >
                    <li
                      className="styled__NavItem-sc-18yti3s-2 lcPtic"
                    >
                      <a
                        className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<span class=\\"os-text\\">Test Page 7</span>",
                          }
                        }
                        href="12-test-page-7"
                        onClick={[Function]}
                      />
                    </li>
                  </ol>
                </details>
              </li>
              <li
                className="styled__NavItem-sc-18yti3s-2 lcPtic"
              >
                <a
                  className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">A</span><span class=\\"os-divider\\"> | </span><span class=\\"os-text\\">Atomic Masses</span>",
                    }
                  }
                  href="a-atomic-masses"
                  onClick={[Function]}
                />
              </li>
              <li
                className="styled__NavItem-sc-18yti3s-2 lcPtic"
              >
                <a
                  className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-number\\">D</span><span class=\\"os-divider\\"> | </span><span class=\\"os-text\\">Glossary of Key Symbols and Notation</span>",
                    }
                  }
                  href="d-glossary-of-key-symbols-and-notation"
                  onClick={[Function]}
                />
              </li>
              <li
                className="styled__NavItem-sc-18yti3s-2 lcPtic"
              >
                <a
                  className="styled__ContentLink-sc-18yti3s-1 eJFaJK"
                  dangerouslySetInnerHTML={
                    Object {
                      "__html": "<span class=\\"os-text\\">Test Page for Generic Styles</span>",
                    }
                  }
                  href="test-page-for-generic-styles"
                  onClick={[Function]}
                />
              </li>
            </ol>
          </div>
          <div
            className="ContentPane__Wrapper-sc-6et83r-0 kpTBXq"
          >
            <div
              className="Content__UndoPadding-sc-1f451g1-3 iqlTSL"
            >
              <div
                className="Content__MainContentWrapper-sc-1f451g1-4 hGEkST"
              >
                <div
                  className="MinPageHeight-sc-1i28xs0-0 hxgCaZ"
                >
                  <div
                    className="RedoPadding-sc-1rj2rww-0 gaOlpC"
                  >
                    <div
                      className="PageContent-ny9bj0-0 iapMdy"
                      tabIndex={0}
                    >
                      <div
                        className="MainContent__HideOutline-sc-6yy1if-0 bdVAq"
                        dangerouslySetInnerHTML={
                          Object {
                            "__html": "<div xmlns:m=\\"http://www.w3.org/1998/Math/MathML\\" xmlns:ns2=\\"urn:oasis:names:tc:opendocument:xmlns:xsl-fo-compatible:1.0\\" class=\\"introduction\\" data-cnxml-to-html-ver=\\"1.3.2\\" data-type=\\"page\\" id=\\"1d1fd537-77fb-4eac-8a8a-60bbaa747b6d\\">this is a test page</div>",
                          }
                        }
                        id="main-content"
                        tabIndex={-1}
                      />
                    </div>
                    <div
                      className="PrevNextBar__BarWrapper-sc-13m2i12-3 fEZPiF"
                      data-analytics-region="prev-next"
                    >
                      <a
                        aria-label="Previous Page"
                        className="PrevNextBar__HidingContentLink-sc-13m2i12-2 eMxlJc"
                        data-analytics-label="prev"
                        href="2-test-page-3"
                        onClick={[Function]}
                      >
                        <svg
                          aria-hidden="true"
                          className="PrevNextBar__LeftArrow-sc-13m2i12-0 bBoLai StyledIconBase-sc-bdy9j4 jbPeIR"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M13.293 6.293L7.586 12l5.707 5.707 1.414-1.414L10.414 12l4.293-4.293z"
                          />
                        </svg>
                        Previous
                      </a>
                      <a
                        aria-label="Next Page"
                        className="PrevNextBar__HidingContentLink-sc-13m2i12-2 TdchT"
                        data-analytics-label="next"
                        href="4-test-page-5"
                        onClick={[Function]}
                      >
                        Next
                        <svg
                          aria-hidden="true"
                          className="PrevNextBar__RightArrow-sc-13m2i12-1 hAIJlW StyledIconBase-sc-bdy9j4 jbPeIR"
                          fill="currentColor"
                          focusable="false"
                          viewBox="0 0 24 24"
                        >
                          <path
                            d="M10.707 17.707L16.414 12l-5.707-5.707-1.414 1.414L13.586 12l-4.293 4.293z"
                          />
                        </svg>
                      </a>
                    </div>
                  </div>
                </div>
                <details
                  className="Details-xi326o-3 Attribution__AttributionDetails-sc-11isnv6-4 ecFdAU"
                  data-analytics-region="attribution"
                  data-testid="attribution-details"
                >
                  <summary
                    aria-label="Citation/Attribution"
                    className="Attribution__AttributionSummary-sc-11isnv6-2 gobEtQ Details__Summary-xi326o-2 goqLfs"
                  >
                    <svg
                      aria-hidden="true"
                      className="Attribution__SummaryClosedIcon-sc-11isnv6-0 gSPJtD Details__ExpandIcon-xi326o-0 cVuUUi StyledIconBase-sc-bdy9j4 cCvWXa"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 192 512"
                    >
                      <path
                        d="M0 384.662V127.338c0-17.818 21.543-26.741 34.142-14.142l128.662 128.662c7.81 7.81 7.81 20.474 0 28.284L34.142 398.804C21.543 411.404 0 402.48 0 384.662z"
                        fill="currentColor"
                      />
                    </svg>
                    <svg
                      aria-hidden="true"
                      className="Attribution__SummaryOpenIcon-sc-11isnv6-1 kRXAve Details__CollapseIcon-xi326o-1 jsdrhW StyledIconBase-sc-bdy9j4 cCvWXa"
                      fill="currentColor"
                      focusable="false"
                      viewBox="0 0 320 512"
                    >
                      <path
                        d="M31.3 192h257.3c17.8 0 26.7 21.5 14.1 34.1L174.1 354.8c-7.8 7.8-20.5 7.8-28.3 0L17.2 226.1C4.6 213.5 13.5 192 31.3 192z"
                        fill="currentColor"
                      />
                    </svg>
                    <span>
                      Citation/Attribution
                    </span>
                  </summary>
                  <div
                    className="Attribution__Content-sc-11isnv6-3 bUUJqd"
                    dangerouslySetInnerHTML={
                      Object {
                        "__html": "
<p>
  Want to cite, share, or modify this book? This book is Sweet License
  1.0 and you must attribute OpenStax.
</p>

<strong>Attribution information</strong>
<ul>
  <li>
    If you are redistributing all or part of this book in a print format,
    then you must include on every physical page the following attribution:
    <blockquote>
      Access for free at https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units
    </blockquote>
  </li>
  <li>
    If you are redistributing all or part of this book in a digital format,
    then you must include on every digital page view the following attribution:
    <blockquote>
      Access for free at <a href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
    </blockquote>
  </li>
</ul>

<strong>Citation information</strong>
<ul>
  <li>
    Use the information below to generate a citation. We recommend using a
    citation tool such as
    <a target=\\"_blank\\" rel=\\"noopener\\" href=\\"https://www.lib.ncsu.edu/citationbuilder/#/default/default\\">this one</a>.
    <ul>
      <li>
        Authors: Bam Bammerson
      </li>
      <li>
        Publisher/website: OpenStax
      </li>
      <li>
        Book title: Test Book 1
      </li>
      <li>
        Publication date: Jun 21, 2012
      </li>
      <li>
        Location: Houston, Texas
      </li>
      <li>
        Book URL: <a href=\\"https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units\\">https://openstax.org/books/book-slug-1/pages/1-introduction-to-science-and-the-realm-of-physics-physical-quantities-and-units</a>
      </li>
      <li>
        Section URL: <a href=\\"https://openstax.org/books/book-slug-1/pages/doesnotmatter\\">https://openstax.org/books/book-slug-1/pages/doesnotmatter</a>
      </li>
    </ul>
  </li>
</ul>

<p>
  © Jun 21, 2012 OpenStax. Textbook content produced by OpenStax is licensed under a
  Sweet License 1.0 license. <strong>The OpenStax name, OpenStax logo, OpenStax book
  covers, OpenStax CNX name, and OpenStax CNX logo are not subject to the Creative Commons license and may
  not be reproduced without the prior and express written consent of Rice University.</strong>
</p>
",
                      }
                    }
                  />
                </details>
                <footer
                  className="styled__FooterWrapper-y5hgq4-4 gprQGv"
                  data-analytics-region="footer"
                >
                  <div
                    className="styled__InnerFooter-y5hgq4-5 cVQewI"
                  >
                    <div
                      className="styled__FooterTop-y5hgq4-6 emNNEw"
                    >
                      <div
                        className="styled__TopBoxed-y5hgq4-7 jVeZhX"
                      >
                        <div
                          aria-level={2}
                          className="styled__Heading-y5hgq4-8 kYpDrD"
                          role="heading"
                        >
                          Our mission is to improve educational access and learning for everyone.
                        </div>
                        <div
                          className="styled__Mission-y5hgq4-9 hHuCFj"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "
  OpenStax is part of Rice University, which is a 501(c)(3) nonprofit.
  <a href=\\"/give\\" target=\\"_blank\\">Give today</a> and help us reach more students.
",
                            }
                          }
                        />
                        <div
                          className="styled__Column1-y5hgq4-12 bBGxDm"
                        >
                          <div
                            className="styled__ColumnHeading-y5hgq4-15 iXuffB"
                          >
                            Help
                          </div>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/contact"
                            rel=""
                            target="_self"
                          >
                            Contact Us
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="https://openstax.secure.force.com/help"
                            rel="noopener"
                            target="_blank"
                          >
                            Support Center
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/faq"
                            rel=""
                            target="_self"
                          >
                            FAQ
                          </a>
                        </div>
                        <div
                          className="styled__Column2-y5hgq4-13 gOHYYF"
                        >
                          <div
                            className="styled__ColumnHeading-y5hgq4-15 iXuffB"
                          >
                            OpenStax
                          </div>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/press"
                            rel=""
                            target="_self"
                          >
                            Press
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="http://www2.openstax.org/l/218812/2016-10-04/lvk"
                            rel="noopener"
                            target="_blank"
                          >
                            Newsletter
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/careers"
                            rel=""
                            target="_self"
                          >
                            Careers
                          </a>
                        </div>
                        <div
                          className="styled__Column3-y5hgq4-14 tBdZW"
                        >
                          <div
                            className="styled__ColumnHeading-y5hgq4-15 iXuffB"
                          >
                            Policies
                          </div>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/accessibility-statement"
                            rel=""
                            target="_self"
                          >
                            Accessibility Statement
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/tos"
                            rel=""
                            target="_self"
                          >
                            Terms of Use
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/license"
                            rel=""
                            target="_self"
                          >
                            Licensing
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/privacy-policy"
                            rel=""
                            target="_self"
                          >
                            Privacy Policy
                          </a>
                        </div>
                      </div>
                    </div>
                    <div
                      className="styled__FooterBottom-y5hgq4-16 DOTyv"
                    >
                      <div
                        className="styled__BottomBoxed-y5hgq4-17 hViXPP"
                      >
                        <div
                          className="styled__Copyrights-y5hgq4-18 bCRniQ"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "
  <div data-html=\\"copyright\\">© 1999-2020, Rice University. Except where otherwise noted, textbooks on this site
    are licensed under a
    <a href=\\"https://creativecommons.org/licenses/by/4.0/\\" target=\\"_blank\\"
    rel=\\"noreferrer\\">Creative Commons Attribution 4.0 International License</a>.
  </div>
  <div data-html=\\"apStatement\\">
    Advanced Placement<sup>®</sup> and AP<sup>®</sup> are trademarks registered and/or owned by the College Board,
    which is not affiliated with, and does not endorse, this site.
  </div>
",
                            }
                          }
                        />
                        <div
                          className="styled__Social-y5hgq4-19 kjjZEm"
                          role="directory"
                        >
                          <a
                            aria-label="facebook"
                            className="styled__SocialIcon-y5hgq4-20 hUKzFZ"
                            href="https://www.facebook.com/openstax"
                            rel="noopener"
                            target="_blank"
                          >
                            <svg
                              aria-hidden="true"
                              className="styled__FBIcon-y5hgq4-0 lbjeVE StyledIconBase-sc-bdy9j4 cCvWXa"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 320 512"
                            >
                              <path
                                d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                          <a
                            aria-label="twitter"
                            className="styled__SocialIcon-y5hgq4-20 hUKzFZ"
                            href="https://twitter.com/openstax"
                            rel="noopener"
                            target="_blank"
                          >
                            <svg
                              aria-hidden="true"
                              className="styled__TwitterIcon-y5hgq4-1 dMlpbg StyledIconBase-sc-bdy9j4 cCvWXa"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 512 512"
                            >
                              <path
                                d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                          <a
                            aria-label="linkedin"
                            className="styled__SocialIcon-y5hgq4-20 hUKzFZ"
                            href="https://www.linkedin.com/company/openstax"
                            rel="noopener"
                            target="_blank"
                          >
                            <svg
                              aria-hidden="true"
                              className="styled__LinkedInIcon-y5hgq4-3 hvjOHs StyledIconBase-sc-bdy9j4 cCvWXa"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 448 512"
                            >
                              <path
                                d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                          <a
                            aria-label="instagram"
                            className="styled__SocialIcon-y5hgq4-20 hUKzFZ"
                            href="https://www.instagram.com/openstax/"
                            rel="noopener"
                            target="_blank"
                          >
                            <svg
                              aria-hidden="true"
                              className="styled__IGIcon-y5hgq4-2 hQnbtn StyledIconBase-sc-bdy9j4 cCvWXa"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 448 512"
                            >
                              <path
                                d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                          <a
                            className="styled__BottomLink-y5hgq4-11 iKPkVp"
                            href="http://www.rice.edu"
                            rel="noopener"
                            target="_blank"
                          >
                            <img
                              alt="Rice University logo"
                              className="styled__FooterLogo-y5hgq4-21 NqIwN"
                              src="rice-white-text.png"
                            />
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;

exports[`content renders empty state 1`] = `
Array [
  <a
    className="HiddenLink-wwwegq-0 fRIsRu"
    href="#main-content"
    onClick={[Function]}
  >
    Skip to Content
  </a>,
  <div
    className="styled__BarWrapper-sc-3syvnw-12 ePgITh"
    data-analytics-region="openstax-navbar"
  >
    <div
      className="styled__TopBar-sc-3syvnw-0 iVnlSK"
      data-testid="navbar"
    >
      <a
        href="/"
      >
        <img
          alt="OpenStax Logo"
          className="styled__HeaderImage-sc-3syvnw-1 gTGoMI"
          role="img"
          src="logo.svg"
        />
      </a>
    </div>
  </div>,
  <div
    className="Content__Background-sc-1f451g1-0 gEoQaE"
  >
    <div
      className="BookBanner__BarWrapper-sc-1avy0c0-5 blPrsP"
    />
    <div
      className="styled__BarWrapper-sc-1119auh-9 iBpta"
      data-analytics-region="toolbar"
    >
      <div
        className="styled__TopBar-sc-1119auh-11 iMGONm"
        data-testid="toolbar"
      >
        <button
          aria-label="Click to open the Table of Contents"
          className="styled__SidebarControl-sc-1119auh-17 DBTIW SidebarControl__ToCButton-sdjc7-2 tGPhq"
          data-testid="toc-button"
          onClick={[Function]}
          tabIndex={-1}
        >
          <svg
            aria-hidden="true"
            className="SidebarControl__ListIcon-sdjc7-0 fmBBsO StyledIconBase-sc-bdy9j4 cCvWXa"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M61.77 401l17.5-20.15a19.92 19.92 0 0 0 5.07-14.19v-3.31C84.34 356 80.5 352 73 352H16a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8h22.83a157.41 157.41 0 0 0-11 12.31l-5.61 7c-4 5.07-5.25 10.13-2.8 14.88l1.05 1.93c3 5.76 6.29 7.88 12.25 7.88h4.73c10.33 0 15.94 2.44 15.94 9.09 0 4.72-4.2 8.22-14.36 8.22a41.54 41.54 0 0 1-15.47-3.12c-6.49-3.88-11.74-3.5-15.6 3.12l-5.59 9.31c-3.72 6.13-3.19 11.72 2.63 15.94 7.71 4.69 20.38 9.44 37 9.44 34.16 0 48.5-22.75 48.5-44.12-.03-14.38-9.12-29.76-28.73-34.88zM496 224H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-160H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 320H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zM16 160h64a8 8 0 0 0 8-8v-16a8 8 0 0 0-8-8H64V40a8 8 0 0 0-8-8H32a8 8 0 0 0-7.14 4.42l-8 16A8 8 0 0 0 24 64h8v64H16a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8zm-3.91 160H80a8 8 0 0 0 8-8v-16a8 8 0 0 0-8-8H41.32c3.29-10.29 48.34-18.68 48.34-56.44 0-29.06-25-39.56-44.47-39.56-21.36 0-33.8 10-40.46 18.75-4.37 5.59-3 10.84 2.8 15.37l8.58 6.88c5.61 4.56 11 2.47 16.12-2.44a13.44 13.44 0 0 1 9.46-3.84c3.33 0 9.28 1.56 9.28 8.75C51 248.19 0 257.31 0 304.59v4C0 316 5.08 320 12.09 320z"
              fill="currentColor"
            />
          </svg>
          <span
            className="SidebarControl__ToCButtonText-sdjc7-1 lkdFTR"
          >
            Table of contents
          </span>
        </button>
        <div
          className="styled__SearchPrintWrapper-sc-1119auh-8 gCGyni"
        >
          <form
            className="styled__SearchInputWrapper-sc-1119auh-6 gFglKV"
            data-testid="desktop-search"
            onSubmit={[Function]}
          >
            <input
              aria-label="Search this book"
              className="styled__SearchInput-sc-1119auh-7 fDlesR"
              data-testid="desktop-search-input"
              onChange={[Function]}
              placeholder="Search this book"
              type="search"
              value=""
            />
            <button
              aria-label="Search this book"
              className="styled__SearchButton-sc-1119auh-4 ikrSnP styled__PlainButton-sc-1119auh-0 kPdLbJ"
              data-testid="mobile-toggle"
              onClick={[Function]}
              type="button"
              value="Search"
            >
              <svg
                aria-hidden="true"
                className="StyledIconBase-sc-bdy9j4 cCvWXa"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 512 512"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                />
              </svg>
            </button>
            <button
              className="styled__SearchButton-sc-1119auh-4 kDdwXC styled__PlainButton-sc-1119auh-0 kPdLbJ"
              value="Search"
            >
              <svg
                aria-hidden="true"
                className="StyledIconBase-sc-bdy9j4 cCvWXa"
                fill="currentColor"
                focusable="false"
                viewBox="0 0 512 512"
              >
                <path
                  d="M505 442.7L405.3 343c-4.5-4.5-10.6-7-17-7H372c27.6-35.3 44-79.7 44-128C416 93.1 322.9 0 208 0S0 93.1 0 208s93.1 208 208 208c48.3 0 92.7-16.4 128-44v16.3c0 6.4 2.5 12.5 7 17l99.7 99.7c9.4 9.4 24.6 9.4 33.9 0l28.3-28.3c9.4-9.4 9.4-24.6.1-34zM208 336c-70.7 0-128-57.2-128-128 0-70.7 57.2-128 128-128 70.7 0 128 57.2 128 128 0 70.7-57.2 128-128 128z"
                  fill="currentColor"
                />
              </svg>
            </button>
          </form>
        </div>
        <button
          aria-label="My highlights"
          className="styled__PlainButton-sc-1119auh-0 HighlightButton__MyHighlightsWrapper-fxks7p-0 ieTRLD"
          onClick={[Function]}
        >
          <img
            aria-hidden="true"
            className="HighlightButton__MyHighlightsIcon-fxks7p-1 iZcVEd"
            src="highlightIcon.svg"
          />
          <span
            className="HighlightButton__MyHighlightsText-fxks7p-2 fJSRKO"
          >
            My highlights
          </span>
        </button>
        <button
          aria-label="print"
          className="styled__PlainButton-sc-1119auh-0 styled__PrintOptWrapper-sc-1119auh-1 kbtaBS"
          data-testid="print"
          onClick={[Function]}
        >
          <svg
            aria-hidden="true"
            className="styled__PrintIcon-sc-1119auh-3 iKTgDK StyledIconBase-sc-bdy9j4 cCvWXa"
            fill="currentColor"
            focusable="false"
            viewBox="0 0 512 512"
          >
            <path
              d="M448 192V77.25c0-8.49-3.37-16.62-9.37-22.63L393.37 9.37c-6-6-14.14-9.37-22.63-9.37H96C78.33 0 64 14.33 64 32v160c-35.35 0-64 28.65-64 64v112c0 8.84 7.16 16 16 16h48v96c0 17.67 14.33 32 32 32h320c17.67 0 32-14.33 32-32v-96h48c8.84 0 16-7.16 16-16V256c0-35.35-28.65-64-64-64zm-64 256H128v-96h256v96zm0-224H128V64h192v48c0 8.84 7.16 16 16 16h48v96zm48 72c-13.25 0-24-10.75-24-24 0-13.26 10.75-24 24-24s24 10.74 24 24c0 13.25-10.75 24-24 24z"
              fill="currentColor"
            />
          </svg>
          <span
            className="styled__PrintOptions-sc-1119auh-2 bRCGrc"
          >
            Print
          </span>
        </button>
      </div>
    </div>
    <div
      className="Content__OuterWrapper-sc-1f451g1-5 eEKyye"
    >
      <div
        className="Wrapper-m6kdbg-0 QCZDS Layout__LayoutBody-s6mgs9-0 dheVTe"
      >
        <div
          className="Content__CenteredContentRow-sc-1f451g1-2 bIMWRC"
        >
          <div
            aria-label="Table of Contents"
            className="wrapper__SidebarBody-sc-1nl0jy-0 fRdwcf"
            data-analytics-region="toc"
            data-testid="toc"
          >
            <div
              className="wrapper__ToCHeader-sc-1nl0jy-1 flbrxb"
              data-testid="tocheader"
            >
              <button
                aria-label="Click to close the Table of Contents"
                className="wrapper__SidebarHeaderButton-sc-1nl0jy-3 fBHtqL SidebarControl__ToCButton-sdjc7-2 tGPhq"
                data-testid="toc-button"
                onClick={[Function]}
              >
                <svg
                  aria-hidden="true"
                  className="SidebarControl__ListIcon-sdjc7-0 fmBBsO StyledIconBase-sc-bdy9j4 cCvWXa"
                  fill="currentColor"
                  focusable="false"
                  viewBox="0 0 512 512"
                >
                  <path
                    d="M61.77 401l17.5-20.15a19.92 19.92 0 0 0 5.07-14.19v-3.31C84.34 356 80.5 352 73 352H16a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8h22.83a157.41 157.41 0 0 0-11 12.31l-5.61 7c-4 5.07-5.25 10.13-2.8 14.88l1.05 1.93c3 5.76 6.29 7.88 12.25 7.88h4.73c10.33 0 15.94 2.44 15.94 9.09 0 4.72-4.2 8.22-14.36 8.22a41.54 41.54 0 0 1-15.47-3.12c-6.49-3.88-11.74-3.5-15.6 3.12l-5.59 9.31c-3.72 6.13-3.19 11.72 2.63 15.94 7.71 4.69 20.38 9.44 37 9.44 34.16 0 48.5-22.75 48.5-44.12-.03-14.38-9.12-29.76-28.73-34.88zM496 224H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zm0-160H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16V80a16 16 0 0 0-16-16zm0 320H176a16 16 0 0 0-16 16v32a16 16 0 0 0 16 16h320a16 16 0 0 0 16-16v-32a16 16 0 0 0-16-16zM16 160h64a8 8 0 0 0 8-8v-16a8 8 0 0 0-8-8H64V40a8 8 0 0 0-8-8H32a8 8 0 0 0-7.14 4.42l-8 16A8 8 0 0 0 24 64h8v64H16a8 8 0 0 0-8 8v16a8 8 0 0 0 8 8zm-3.91 160H80a8 8 0 0 0 8-8v-16a8 8 0 0 0-8-8H41.32c3.29-10.29 48.34-18.68 48.34-56.44 0-29.06-25-39.56-44.47-39.56-21.36 0-33.8 10-40.46 18.75-4.37 5.59-3 10.84 2.8 15.37l8.58 6.88c5.61 4.56 11 2.47 16.12-2.44a13.44 13.44 0 0 1 9.46-3.84c3.33 0 9.28 1.56 9.28 8.75C51 248.19 0 257.31 0 304.59v4C0 316 5.08 320 12.09 320z"
                    fill="currentColor"
                  />
                </svg>
                <span
                  className="SidebarControl__ToCButtonText-sdjc7-1 gWBlHr"
                >
                  Table of contents
                </span>
                <svg
                  aria-hidden="true"
                  className="wrapper__TimesIcon-sc-1nl0jy-2 hvKSwO"
                  focusable="false"
                  height="15px"
                  version="1.1"
                  viewBox="0 0 15 15"
                  width="15px"
                >
                  <g
                    fill="none"
                    fillRule="evenodd"
                    stroke="none"
                    strokeWidth="1"
                  >
                    <g
                      fill="currentColor"
                      transform="translate(-302.000000, -18.000000)"
                    >
                      <g
                        transform="translate(302.000000, 18.000000)"
                      >
                        <path
                          d="M7.5,5.41522791 L12.0331524,0.579865364 C12.3077536,0.286957429 12.7165503,0.24816296 12.946282,0.493210121 L13.9861449,1.60239723 C14.2158766,1.84744439 14.1795068,2.28349422 13.9049056,2.57640216 L9.37175324,7.41176471 L13.9049056,12.2471273 C14.1795068,12.5400352 14.2158766,12.976085 13.9861449,13.2211322 L12.946282,14.3303193 C12.7165503,14.5753665 12.3077536,14.536572 12.0331524,14.243664 L7.5,9.4083015 L2.96684761,14.243664 C2.69224642,14.536572 2.2834497,14.5753665 2.05371799,14.3303193 L1.01385508,13.2211322 C0.784123363,12.976085 0.820493178,12.5400352 1.09509437,12.2471273 L5.62824676,7.41176471 L1.09509437,2.57640216 C0.820493178,2.28349422 0.784123363,1.84744439 1.01385508,1.60239723 L2.05371799,0.493210121 C2.2834497,0.24816296 2.69224642,0.286957429 2.96684761,0.579865364 L7.5,5.41522791 Z"
                        />
                      </g>
                    </g>
                  </g>
                </svg>
              </button>
            </div>
          </div>
          <div
            className="ContentPane__Wrapper-sc-6et83r-0 kpTBXq"
          >
            <div
              className="Content__UndoPadding-sc-1f451g1-3 iqlTSL"
            >
              <div
                className="Content__MainContentWrapper-sc-1f451g1-4 hGEkST"
              >
                <div
                  className="MinPageHeight-sc-1i28xs0-0 hxgCaZ"
                >
                  <div
                    className="RedoPadding-sc-1rj2rww-0 gaOlpC"
                  >
                    <div
                      className="PageContent-ny9bj0-0 iapMdy"
                      tabIndex={0}
                    >
                      <div
                        className="MainContent__HideOutline-sc-6yy1if-0 bdVAq"
                        id="main-content"
                        tabIndex={-1}
                      >
                        <svg
                          className="Loader__LoadingIcon-dfuqve-0 JpGEu"
                          data-testid="loader"
                          id="Layer_1"
                          version="1.1"
                          viewBox="0 0 57.6 39.1"
                          x="0px"
                          y="0px"
                        >
                          <path
                            className="os-blue"
                            d="M38.4,22c0,0.4-0.3,0.7-0.7,0.7H13.5c-0.4,0-0.7-0.3-0.7-0.7v-1.4c0-0.4,0.3-0.7,0.7-0.7h24.2 c0.4,0,0.7,0.3,0.7,0.7V22z"
                            id="os-blue"
                            style={
                              Object {
                                "fill": "#00246a",
                              }
                            }
                          />
                          <path
                            className="os-yellow"
                            d="M41.8,17.8c0,0.4-0.3,0.7-0.7,0.7l-25.4,0.8c-0.4,0-0.7-0.3-0.7-0.7l-0.1-2.1 c0-0.4,0.3-0.7,0.7-0.7L41,15c0.4,0,0.7,0.3,0.7,0.7L41.8,17.8z"
                            id="os-yellow"
                            style={
                              Object {
                                "fill": "#f4d019",
                              }
                            }
                          />
                          <path
                            className="os-gray"
                            d="M34.8,14c0,0.4-0.3,0.7-0.7,0.7H11.6c-0.4,0-0.7-0.3-0.7-0.7v-3.5c0-0.4,0.3-0.7,0.7-0.7h22.5 c0.4,0,0.7,0.3,0.7,0.7V14z"
                            id="os-gray"
                            style={
                              Object {
                                "fill": "#5e6062",
                              }
                            }
                          />
                          <path
                            className="os-orange"
                            d="M39,8.1c0,0.3-0.4,0.5-1,0.5H8.6c-0.5,0-1-0.2-1-0.5V6.9c0-0.3,0.4-0.5,1-0.5H38 c0.5,0,1,0.2,1,0.5V8.1z"
                            id="os-orange"
                            style={
                              Object {
                                "fill": "#f47641",
                              }
                            }
                          />
                          <path
                            className="os-green"
                            d="M43.9,5c0,0.7-0.6,1.2-1.2,1.1L15,4.8c-0.7,0-1.2-0.6-1.1-1.2L14,1.1c0-0.7,0.6-1.2,1.2-1.1 l27.7,1.3c0.7,0,1.2,0.6,1.1,1.2L43.9,5z"
                            id="os-green"
                            style={
                              Object {
                                "fill": "#77af42",
                              }
                            }
                          />
                          <path
                            className="os-type"
                            d="M3.1,30.2c-1.8,0-3.1,1.3-3.1,3.1c0,1.8,1.3,3.1,3.1,3.1c1.8,0,3.1-1.3,3.1-3.1 C6.2,31.5,4.9,30.2,3.1,30.2z M3.1,35.7c-1.4,0-2.3-1.1-2.3-2.4c0-1.3,0.9-2.4,2.3-2.4c1.4,0,2.3,1.1,2.3,2.4 C5.4,34.6,4.5,35.7,3.1,35.7z M10.9,30.2c-0.9,0-1.9,0.4-2.4,1.2h0v-1H7.7v8.8h0.8v-3.9h0C9,36,10,36.4,10.9,36.4 c1.8,0,3.1-1.3,3.1-3.1C14,31.5,12.7,30.2,10.9,30.2z M10.9,35.7c-1.4,0-2.5-1.1-2.5-2.4c0-1.3,1.1-2.4,2.5-2.4 c1.4,0,2.3,1.1,2.3,2.4C13.2,34.6,12.3,35.7,10.9,35.7z M18.3,30.2c-1.7,0-2.9,1.3-2.9,3.1c0,1.8,1.2,3.1,3,3.1c1,0,2-0.4,2.6-1.3 l-0.6-0.5c-0.4,0.6-1.2,1-2,1c-1.8,0-2.2-1.6-2.2-2.2h5v-0.5C21.1,31.6,20.1,30.2,18.3,30.2z M16.1,32.8c0-0.3,0.5-1.9,2.1-1.9 c1.1,0,2,0.9,2,1.9H16.1z M27.9,32.7v3.5h-0.8v-3.5c0-1-0.3-1.9-1.5-1.9c-1.1,0-2,0.8-2,2.4v2.9h-0.8V32c0-0.4-0.1-1.4-0.1-1.7h0.8 c0,0.4,0,0.9,0.1,1h0c0.3-0.7,1.1-1.2,2-1.2C27.4,30.2,27.9,31.4,27.9,32.7z M34.2,34.4c0,1.5-1.4,2-2.6,2c-0.9,0-1.8-0.2-2.4-0.9 l1-1c0.4,0.4,0.8,0.8,1.5,0.8c0.4,0,1-0.2,1-0.7c0-1.3-3.3-0.3-3.3-2.6c0-1.4,1.2-2,2.5-2c0.8,0,1.7,0.3,2.2,0.9l-1,0.9 c-0.3-0.4-0.7-0.6-1.2-0.6c-0.4,0-0.9,0.2-0.9,0.7C30.9,32.9,34.2,32,34.2,34.4z M37.5,30.1h1.7v1.3h-1.7v2.7c0,0.6,0.2,1,0.9,1 c0.3,0,0.6-0.1,0.8-0.2v1.3c-0.3,0.2-0.9,0.2-1.2,0.2c-1.6,0-2-0.7-2-2.2v-2.8h-1.3v-1.3H36v-1.8h1.5V30.1z M43,30 c-1,0-1.9,0.3-2.6,1l0.8,0.8c0.4-0.4,1-0.6,1.6-0.6c0.8,0,1.4,0.4,1.4,1.1v0.2h-0.4c-1.5,0-3.9,0.1-3.9,2.1c0,1.2,1.1,1.8,2.2,1.8 c0.8,0,1.5-0.3,2-1h0v0.8h1.4v-3.5C45.6,31.8,45.6,30,43,30z M44.1,33.8c0,0.9-0.5,1.4-1.5,1.4c-0.5,0-1.1-0.2-1.1-0.8 c0-0.9,1.5-0.9,2.3-0.9h0.3V33.8z M50.8,32.9l2.5,3.3h-1.9L49.8,34l-1.6,2.2h-1.8l2.5-3.3l-2.1-2.8h1.9l1.2,1.8l1.3-1.8h1.7 L50.8,32.9z M57.6,30.1v1.7h-0.3v-1.5h0l-0.6,1.5h-0.2l-0.6-1.5h0v1.5h-0.3v-1.7h0.4l0.5,1.3l0.5-1.3H57.6z M53.9,30.1h1.4v0.3h-0.5 v1.5h-0.3v-1.5h-0.5V30.1z"
                            id="os-type"
                            style={
                              Object {
                                "fill": "#5e6062",
                              }
                            }
                          />
                        </svg>
                      </div>
                    </div>
                  </div>
                </div>
                <footer
                  className="styled__FooterWrapper-y5hgq4-4 gprQGv"
                  data-analytics-region="footer"
                >
                  <div
                    className="styled__InnerFooter-y5hgq4-5 cVQewI"
                  >
                    <div
                      className="styled__FooterTop-y5hgq4-6 emNNEw"
                    >
                      <div
                        className="styled__TopBoxed-y5hgq4-7 jVeZhX"
                      >
                        <div
                          aria-level={2}
                          className="styled__Heading-y5hgq4-8 kYpDrD"
                          role="heading"
                        >
                          Our mission is to improve educational access and learning for everyone.
                        </div>
                        <div
                          className="styled__Mission-y5hgq4-9 hHuCFj"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "
  OpenStax is part of Rice University, which is a 501(c)(3) nonprofit.
  <a href=\\"/give\\" target=\\"_blank\\">Give today</a> and help us reach more students.
",
                            }
                          }
                        />
                        <div
                          className="styled__Column1-y5hgq4-12 bBGxDm"
                        >
                          <div
                            className="styled__ColumnHeading-y5hgq4-15 iXuffB"
                          >
                            Help
                          </div>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/contact"
                            rel=""
                            target="_self"
                          >
                            Contact Us
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="https://openstax.secure.force.com/help"
                            rel="noopener"
                            target="_blank"
                          >
                            Support Center
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/faq"
                            rel=""
                            target="_self"
                          >
                            FAQ
                          </a>
                        </div>
                        <div
                          className="styled__Column2-y5hgq4-13 gOHYYF"
                        >
                          <div
                            className="styled__ColumnHeading-y5hgq4-15 iXuffB"
                          >
                            OpenStax
                          </div>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/press"
                            rel=""
                            target="_self"
                          >
                            Press
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="http://www2.openstax.org/l/218812/2016-10-04/lvk"
                            rel="noopener"
                            target="_blank"
                          >
                            Newsletter
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/careers"
                            rel=""
                            target="_self"
                          >
                            Careers
                          </a>
                        </div>
                        <div
                          className="styled__Column3-y5hgq4-14 tBdZW"
                        >
                          <div
                            className="styled__ColumnHeading-y5hgq4-15 iXuffB"
                          >
                            Policies
                          </div>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/accessibility-statement"
                            rel=""
                            target="_self"
                          >
                            Accessibility Statement
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/tos"
                            rel=""
                            target="_self"
                          >
                            Terms of Use
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/license"
                            rel=""
                            target="_self"
                          >
                            Licensing
                          </a>
                          <a
                            className="styled__FooterLink-y5hgq4-10 ZbGzz"
                            href="/privacy-policy"
                            rel=""
                            target="_self"
                          >
                            Privacy Policy
                          </a>
                        </div>
                      </div>
                    </div>
                    <div
                      className="styled__FooterBottom-y5hgq4-16 DOTyv"
                    >
                      <div
                        className="styled__BottomBoxed-y5hgq4-17 hViXPP"
                      >
                        <div
                          className="styled__Copyrights-y5hgq4-18 bCRniQ"
                          dangerouslySetInnerHTML={
                            Object {
                              "__html": "
  <div data-html=\\"copyright\\">© 1999-2020, Rice University. Except where otherwise noted, textbooks on this site
    are licensed under a
    <a href=\\"https://creativecommons.org/licenses/by/4.0/\\" target=\\"_blank\\"
    rel=\\"noreferrer\\">Creative Commons Attribution 4.0 International License</a>.
  </div>
  <div data-html=\\"apStatement\\">
    Advanced Placement<sup>®</sup> and AP<sup>®</sup> are trademarks registered and/or owned by the College Board,
    which is not affiliated with, and does not endorse, this site.
  </div>
",
                            }
                          }
                        />
                        <div
                          className="styled__Social-y5hgq4-19 kjjZEm"
                          role="directory"
                        >
                          <a
                            aria-label="facebook"
                            className="styled__SocialIcon-y5hgq4-20 hUKzFZ"
                            href="https://www.facebook.com/openstax"
                            rel="noopener"
                            target="_blank"
                          >
                            <svg
                              aria-hidden="true"
                              className="styled__FBIcon-y5hgq4-0 lbjeVE StyledIconBase-sc-bdy9j4 cCvWXa"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 320 512"
                            >
                              <path
                                d="M279.14 288l14.22-92.66h-88.91v-60.13c0-25.35 12.42-50.06 52.24-50.06h40.42V6.26S260.43 0 225.36 0c-73.22 0-121.08 44.38-121.08 124.72v70.62H22.89V288h81.39v224h100.17V288z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                          <a
                            aria-label="twitter"
                            className="styled__SocialIcon-y5hgq4-20 hUKzFZ"
                            href="https://twitter.com/openstax"
                            rel="noopener"
                            target="_blank"
                          >
                            <svg
                              aria-hidden="true"
                              className="styled__TwitterIcon-y5hgq4-1 dMlpbg StyledIconBase-sc-bdy9j4 cCvWXa"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 512 512"
                            >
                              <path
                                d="M459.37 151.716c.325 4.548.325 9.097.325 13.645 0 138.72-105.583 298.558-298.558 298.558-59.452 0-114.68-17.219-161.137-47.106 8.447.974 16.568 1.299 25.34 1.299 49.055 0 94.213-16.568 130.274-44.832-46.132-.975-84.792-31.188-98.112-72.772 6.498.974 12.995 1.624 19.818 1.624 9.421 0 18.843-1.3 27.614-3.573-48.081-9.747-84.143-51.98-84.143-102.985v-1.299c13.969 7.797 30.214 12.67 47.431 13.319-28.264-18.843-46.781-51.005-46.781-87.391 0-19.492 5.197-37.36 14.294-52.954 51.655 63.675 129.3 105.258 216.365 109.807-1.624-7.797-2.599-15.918-2.599-24.04 0-57.828 46.782-104.934 104.934-104.934 30.213 0 57.502 12.67 76.67 33.137 23.715-4.548 46.456-13.32 66.599-25.34-7.798 24.366-24.366 44.833-46.132 57.827 21.117-2.273 41.584-8.122 60.426-16.243-14.292 20.791-32.161 39.308-52.628 54.253z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                          <a
                            aria-label="linkedin"
                            className="styled__SocialIcon-y5hgq4-20 hUKzFZ"
                            href="https://www.linkedin.com/company/openstax"
                            rel="noopener"
                            target="_blank"
                          >
                            <svg
                              aria-hidden="true"
                              className="styled__LinkedInIcon-y5hgq4-3 hvjOHs StyledIconBase-sc-bdy9j4 cCvWXa"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 448 512"
                            >
                              <path
                                d="M100.28 448H7.4V148.9h92.88zM53.79 108.1C24.09 108.1 0 83.5 0 53.8a53.79 53.79 0 0 1 107.58 0c0 29.7-24.1 54.3-53.79 54.3zM447.9 448h-92.68V302.4c0-34.7-.7-79.2-48.29-79.2-48.29 0-55.69 37.7-55.69 76.7V448h-92.78V148.9h89.08v40.8h1.3c12.4-23.5 42.69-48.3 87.88-48.3 94 0 111.28 61.9 111.28 142.3V448z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                          <a
                            aria-label="instagram"
                            className="styled__SocialIcon-y5hgq4-20 hUKzFZ"
                            href="https://www.instagram.com/openstax/"
                            rel="noopener"
                            target="_blank"
                          >
                            <svg
                              aria-hidden="true"
                              className="styled__IGIcon-y5hgq4-2 hQnbtn StyledIconBase-sc-bdy9j4 cCvWXa"
                              fill="currentColor"
                              focusable="false"
                              viewBox="0 0 448 512"
                            >
                              <path
                                d="M224.1 141c-63.6 0-114.9 51.3-114.9 114.9s51.3 114.9 114.9 114.9S339 319.5 339 255.9 287.7 141 224.1 141zm0 189.6c-41.1 0-74.7-33.5-74.7-74.7s33.5-74.7 74.7-74.7 74.7 33.5 74.7 74.7-33.6 74.7-74.7 74.7zm146.4-194.3c0 14.9-12 26.8-26.8 26.8-14.9 0-26.8-12-26.8-26.8s12-26.8 26.8-26.8 26.8 12 26.8 26.8zm76.1 27.2c-1.7-35.9-9.9-67.7-36.2-93.9-26.2-26.2-58-34.4-93.9-36.2-37-2.1-147.9-2.1-184.9 0-35.8 1.7-67.6 9.9-93.9 36.1s-34.4 58-36.2 93.9c-2.1 37-2.1 147.9 0 184.9 1.7 35.9 9.9 67.7 36.2 93.9s58 34.4 93.9 36.2c37 2.1 147.9 2.1 184.9 0 35.9-1.7 67.7-9.9 93.9-36.2 26.2-26.2 34.4-58 36.2-93.9 2.1-37 2.1-147.8 0-184.8zM398.8 388c-7.8 19.6-22.9 34.7-42.6 42.6-29.5 11.7-99.5 9-132.1 9s-102.7 2.6-132.1-9c-19.6-7.8-34.7-22.9-42.6-42.6-11.7-29.5-9-99.5-9-132.1s-2.6-102.7 9-132.1c7.8-19.6 22.9-34.7 42.6-42.6 29.5-11.7 99.5-9 132.1-9s102.7-2.6 132.1 9c19.6 7.8 34.7 22.9 42.6 42.6 11.7 29.5 9 99.5 9 132.1s2.7 102.7-9 132.1z"
                                fill="currentColor"
                              />
                            </svg>
                          </a>
                          <a
                            className="styled__BottomLink-y5hgq4-11 iKPkVp"
                            href="http://www.rice.edu"
                            rel="noopener"
                            target="_blank"
                          >
                            <img
                              alt="Rice University logo"
                              className="styled__FooterLogo-y5hgq4-21 NqIwN"
                              src="rice-white-text.png"
                            />
                          </a>
                        </div>
                      </div>
                    </div>
                  </div>
                </footer>
              </div>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>,
]
`;
